# once-fn

./: Cargo.toml  README.md
.github/workflows/: test.yml
src/: lib.rs
tests/: complex.rs  once_impl.rs  ref_in_return_type.rs  valid.rs  validation.rs
