[package]
authors     = ["Absolutex <lxl66566@gmail.com>"]
categories  = ["rust-patterns"]
description = "make a function runs only once"
edition     = "2021"
homepage    = "https://github.com/lxl66566/fn-once"
keywords    = ["once", "proc-macro", "cache"]
license     = "MIT"
name        = "fn-once"
readme      = "README.md"
repository  = "https://github.com/lxl66566/fn-once"
version     = "0.1.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote       = "1.0"
syn         = { version = "2.0", features = ["full"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
