[package]
authors     = ["Absolutex <lxl66566@gmail.com>"]
categories  = ["rust-patterns"]
description = "cache the result of a function, make it runs only once"
edition     = "2021"
homepage    = "https://github.com/lxl66566/once-fn"
keywords    = ["once", "proc-macro", "cache"]
license     = "MIT"
name        = "once-fn"
readme      = "README.md"
repository  = "https://github.com/lxl66566/once-fn"
version     = "0.2.0"

[lib]
proc-macro = true

[dependencies]
heck        = "0.5"
proc-macro2 = "1.0"
quote       = "1.0"
syn         = { version = "2.0", features = ["full"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
